# swpathtracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  aabb.cpp  aabb.h  accel_structure.h  acceleration_structure.h  brdf.h  bsdf.cpp  bsdf.h  bsdf_sample.h  buffer.cpp  buffer.h  bvh.cpp  bvh.h  bxdf.h  camera.cpp  camera.h  cmd_line_options.h  cmdlineparser.h  cook_torrance.cpp  cook_torrance.h  core.h  depth_raycaster.cpp  depth_raycaster.h  fresnel.h  global_settings.h  image_buffer.cpp  image_buffer.h  int_test_count_raycaster.cpp  int_test_count_raycaster.h  integrator.cpp  integrator.h  intersection_record.h  intersection_test_count_raycaster.cpp  intersection_test_count_raycaster.h  lambertian.cpp  (+66 more)
acceleration/: aabb.cpp  aabb.h  accel_structure.h  no_accel_structure.cpp  no_accel_structure.h  primitive_ref.h  sbvh.cpp  sbvh.h  sbvh_node.h
bsdf_samplers/: bsdf_sample.h  bsdf_sampler.cpp  bsdf_sampler.h  cook_torrance_bsdf_sampler.cpp  cook_torrance_bsdf_sampler.h  cosine_bsdf_sampler.cpp  cosine_bsdf_sampler.h  refraction_bsdf_sampler.cpp  refraction_bsdf_sampler.h  smooth_specular_bsdf_sampler.cpp  smooth_specular_bsdf_sampler.h  uniform_bsdf_sampler.cpp  uniform_bsdf_sampler.h
bsdfs/: bsdf.cpp  bsdf.h  cook_torrance.h  fresnel.cpp  fresnel.h  fresnel_complex.h  fresnel_schlick.h  lambertian.cpp  lambertian.h  layered_bsdf.cpp  layered_bsdf.h  smooth_conductor.cpp  smooth_conductor.h  smooth_dielectric.cpp  smooth_dielectric.h
cameras/: camera.cpp  camera.h  orthographic_camera.cpp  orthographic_camera.h  pinhole_camera.h
core/: cmd_line_options.h  core.h  image_buffer.h  intersection_record.h  main.cpp  main.h  onb.cpp  onb.h  prng.h  ray.h  scene.cpp  scene.h  swpathtracer_app.cpp  swpathtracer_app.h  timer.h
dbg/: debug.py  debug_pinhole.py  inf_pdf.py  inspect_sbvh_node.py  test.py  track_ray_path.py
integrators/: depth_raycaster.cpp  depth_raycaster.h  int_test_count_raycaster.cpp  int_test_count_raycaster.h  integrator.cpp  integrator.h  normal_raycaster.cpp  normal_raycaster.h  pathtracer.cpp  pathtracer.h  raycaster.h
lua_bind/: bsdf.h  camera.h  cook_torrance.h  emission.h  global_settings.h  image_buffer.h  integrator.h  lambertian.h  layered_bsdf.h  lb_bsdf.h  lb_camera.h  lb_cook_torrance.h  lb_emission.h  lb_global_settings.h  lb_image_buffer.h  lb_integrator.h  lb_lambertian.h  lb_layered_bsdf.h  lb_material.h  lb_mesh.h  lb_object.h  lb_orthographic_camera.h  lb_pinhole_camera.h  lb_pixel_sampler.h  lb_smooth_conductor.h  lb_smooth_dielectric.h  lb_smooth_mesh.h  lb_smooth_triangle.h  lb_sphere.h  lb_triangle.h  lua_bind.cpp  lua_bind.h  material.h  mesh.h  object.h  orthographic_camera.h  pinhole_camera.h  pixel_sampler.h  smooth_conductor.h  smooth_dielectric.h  (+4 more)
lua_core/: buffers.lua  cameras.lua  colors.lua  core.lua  emissions.lua  global_settings.lua  globals.lua  material.lua  materials.lua  meshes.lua  objects.lua  pixel_samplers.lua  primitives.lua  registervars.lua  samplers.lua  validation.lua
lua_core_scripts/: bsdfs.lua  cameras.lua  core.lua  emissions.lua  global_settings.lua  image_buffers.lua  integrators.lua  layered_bsdfs.lua  materials.lua  objects.lua  pixel_samplers.lua  registervars.lua
materials/: bsdf.h  cook_torrance.cpp  cook_torrance.h  fresnel.h  fresnel_complex.h  fresnel_schlick.cpp  fresnel_schlick.h  lambertian.cpp  lambertian.h  layered_bsdf.cpp  layered_bsdf.h  material.cpp  material.h  smooth_conductor.h  smooth_dielectric.h
misc/: emptybox.lua  test_model.lua  xxxxx.lua
pixel_samplers/: jittered_pixel_sampler.cpp  jittered_pixel_sampler.h  pixel_sampler.cpp  pixel_sampler.h  regular_pixel_sampler.cpp  regular_pixel_sampler.h  uniform_pixel_sampler.cpp  uniform_pixel_sampler.h
primitives/: primitive.h  smooth_triangle.h  sphere.h  triangle.h
samples/: furnace_test.lua  materials_test.lua  monkey_in_a_box.lua  procedural.lua  rough_metal.lua  smallpt_diffuse.lua  sphere_in_a_box.lua  test.lua
